--- a/SwiftBlog.Api/SwiftBlog.Api.csproj
+++ b/SwiftBlog.Api/SwiftBlog.Api.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.24">
       <PrivateAssets>all</PrivateAssets>
@@ -21,9 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Application\Features\" />
-    <Folder Include="Core\Application\Dtos\" />
-    <Folder Include="Core\Application\Mappings\" />
+    <Folder Include="Core\Application\Features\CQRS\Results\" />
     <Folder Include="Infrastructure\JwtDefault\" />
     <Folder Include="Infrastructure\JwtGenerator\" />
     <Folder Include="Persistance\Migrations\" />
